# MyLangchainProject

./: pyproject.toml
src/mylangchain_app/00Basic/: 003-1_PydanticParser.ipynb  003-2_StructuredParser.ipynb  003-3_DatetimeParser.ipynb  003_OutPutParser종류.ipynb  004_Model_Parameter.ipynb  005_ChatUpstage 활용.ipynb  006_Gemini활용.ipynb  010_LangServe_Basic.py  011_LangSmith_Basic.ipynb
src/mylangchain_app/01RAG/: 010_RAG_Pipeline_0Basic.ipynb  010_RAG_Pipeline_1DocumentLoader_pdf.ipynb  010_RAG_Pipeline_1DocumentLoader_pdf_Upstage.ipynb  010_RAG_Pipeline_2.1TextSplitter.ipynb  010_RAG_Pipeline_3Embedding.ipynb  010_RAG_Pipeline_4Chroma_FAISS.ipynb  010_RAG_Pipeline_5Retriever.ipynb  011_RAG_DocxLoader_Faiss_Upstage.ipynb  011_RAG_WebBaseLoader_Upstage.ipynb
src/mylangchain_app/01RAG/faiss_db/: index.pkl
src/mylangchain_app/01RAG/faiss_docdb/: index.pkl
src/mylangchain_app/01RAG/faiss_index/: index.pkl
src/mylangchain_app/01RAG/faiss_index_upstage/: index.faiss  index.pkl
src/mylangchain_app/02Ollama/: 013_Ollama_DeepSeek-r1_Basic.ipynb  013_Ollama_DeepSeek-r1_Qwen2연동.ipynb
src/mylangchain_app/02Ollama/.gradio/flagged/: dataset1.csv
src/mylangchain_app/03ChatBot/: 00chatbot_gradioBasic.ipynb  02chatbot_gradio_chatopenai.ipynb  03chatbot_gradio_rag.ipynb
src/mylangchain_app/05LangGraph/: 00_LangChain _LangGraph_비교.ipynb
src/mylangchain_app/Task/: 1-1_Cooker.ipynb  Task2.ipynb  Task3.ipynb
src/mylangchain_app/Task/faiss_index_upstage/: index.faiss  index.pkl
src/mylangchain_app/db/fauss_db/: index.pkl
